--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1,3 +1,18 @@
+
+:root {
+  --color-bg: #cdcfd0;
+  --color-text: #08090a;
+  --color-blue: #3b49df;
+  --color-red: #df3b3b;
+  --color-green: #2AC41F;
+  --color-yellow: #ffcd3c;
+  --color-gray: #b5bdc4;
+  --color-frame: #9ba2a8;
+  --color-heading: #717374;
+  --color-primary: #7e3ade;
+  --color-secondary: #cb6ce5;
+}
+
 #app {
   position: absolute;
   display: flex;
@@ -13,13 +28,210 @@
   width: 376px;
   height: 666px;
   z-index: 100;
-
   background: white;
   border-radius: 3px;
   box-shadow: 0 0 5px 0 rgba(0, 0, 0, .9);
+  display: flex;
+  flex-direction: column;
 }
 
 #app .container-view {
   padding: 20px;
+  flex-wrap: wrap;
+  height: 80%
 }
 
+footer {
+  bottom:0;
+  display: flex;
+  justify-content: space-around;
+  padding: 5%;
+
+}
+
+.nav-item {
+  cursor: pointer;
+  border-radius: 50%;
+  padding: 2%;
+  color: var(--color-gray);
+}
+
+.nav-item:hover{
+  background-color: lightgray;
+  color: var(--color-green);
+  filter:brightness(110%);
+  /* opacity: 0.5; */
+  transition: 0.2s ease-in-out;
+  transform: scale(1.5);
+}
+
+
+.card {
+  padding: 2px;
+  margin: 1rem 1rem;
+  background-color: white;
+  border-radius: 10px;
+}
+
+/* Loader */
+
+.loader {
+  border: 10px solid var(--color-bg);
+  border-top: 10px solid var(--color-blue);
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  animation: spin 2s linear infinite;
+  margin: auto;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.activity-feed {
+  border-radius: 5px;
+  overflow-x: hidden;
+  overflow-y: scroll;
+  height: 90%;
+  max-height: 630px;
+  /* margin-left:20px; */
+  /* background-color: lightgray; */
+}
+
+.activity-detail {
+  margin: 2%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.activity-detail:hover{
+  filter: brightness(0.9); 
+  transition: 0.2s ease-in-out;
+
+}
+
+.activity-time {
+  width: 10%;
+  height: min-content;
+  border-left: 2px dotted var(--color-frame);
+  padding: 5%;
+  display: flex;
+  align-items: center;
+  filter: brightness(75%);
+  margin: auto 0;
+
+}
+
+
+.activity-info {
+  width:50%;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.text-xs {
+  font-size: 0.75rem;
+  line-height: 1rem;
+}
+
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
+.text-base {
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
+
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+}
+
+.text-white {
+  color:white
+}
+
+.text-gray {
+  color: var(--color-gray);
+}
+
+.text-red {
+  color: var(--color-red);
+}
+
+.activity-date {
+  color: var(--color-frame);
+  filter: brightness(75%);
+  font-weight: 900;
+  font-family: "Arial";
+  line-height: 0%;
+  font-size: smaller;
+}
+
+
+.flex {
+  display: flex;
+}
+.flex-col {
+  flex-direction: column;
+}
+.bold {
+  font-weight: bold;
+}
+
+.justify-between {
+  justify-content: space-between;
+}
+
+.items-center {
+  align-items: center;
+}
+
+hr.dotted {
+  border-style: dotted none none;
+  border-width: 7px;
+  border-color: var(--color-gray);
+  filter: brightness(50%);
+}
+
+.dot-border {
+  border-top: 2px dotted var(--color-frame);
+  width: 33%;
+}
+
+.p-2 {
+  padding: 0 2%;
+}
+
+.am-box {
+  border: 2px solid var(--color-gray);
+  padding: 1px;
+  font-weight: bold;
+  border-radius: 3px;
+  height: min-content;
+}
+
+#info {
+  display: flex;
+  flex-direction: column;
+  line-height: 1.5;
+}
+
+.action-icon {
+  cursor: pointer;
+}
